--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         </div>
 
         <header class="header">
+            <div class="progress-container">
+    <div class="progress-bar" id="myBar"></div>
+  </div>  
             <!-- <img src="img/logo.png" alt="Nexter logo" class="header__logo"> -->
             <div class="header__content">
             <h2 class="heading-2" >නමෝ තස්ස භගවතෝ අරහතෝ<br>සම්මා සම්බුද්ධස්ස!</h2>
@@ -47,6 +50,8 @@
                 <img src="img/logo-bi.png" alt="Seen on logo 4">
             </div> -->
         </header>
+
+
         <h2 class="heading-2" id="gatha">තෙරුවන් සරණ යමු</h2>
         <div class="accordionWrapper">
 
@@ -513,10 +518,13 @@
                         <strong>රැඳී සිටින්න නිර්වාණ&#160;ධර්ම සමඟින්!</strong>
                     </p>
                     <p class="social">
-                        <a href="https://www.facebook.com/" target="_blank" class="btn btn-social-icon btn-facebook"><i class="fab fa-facebook-square"></i></a>
-                        <a href="https://twitter.com/" target="_blank" class="btn btn-social-icon btn-twitter"><i class="fab fa-twitter-square"></i></a>
-                        <a href="https://plus.google.com/" target="_blank" class="btn btn-social-icon btn-google-plus"><i class="fab fa-google-plus-square"></i></a>
-                        <a href="https://lk.linkedin.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank" class="btn btn-social-icon btn-facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/" target="_blank" class="btn btn-social-icon btn-twitter"><i class="fab fa-twitter"></i></a>
+
+                        <a href="https://lk.linkedin.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://youtube.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-youtube"></i></a>
+                        <a href="https://instagram.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-instagram"></i></a>
+                        <a href="https://pinterest.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-pinterest-p"></i></a>
                     </p>
                     <p>ශ්‍රී ලංකාවේ කැළණිපුරවරයේ සිට නිර්වාණ&#160;ධර්ම විහිදී පැතිරෙන වගයි! </p>
                     <p>Designing & Hosting by ROSHAN BANDARA </p>
@@ -526,9 +534,8 @@
         <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
 
         <!-- <a href="#" class="scrollToTop" style="display: none;">Top</a> -->
+
         
     </body>
     <script src="js/script.js" type="text/JavaScript"></script>
 </html>
-
-
