--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
 
         </div>
-         <h2 class="heading-2" id="about">අපේ විත්ති</h2>
+         <h2 class="heading-2" id="about">අප ගැන</h2>
 
          <div class="about-us">
 
@@ -518,12 +518,13 @@
                         <a href="https://www.facebook.com/" target="_blank" class="btn btn-social-icon btn-facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com/" target="_blank" class="btn btn-social-icon btn-twitter"><i class="fab fa-twitter"></i></a>
 
-                        <a href="https://lk.linkedin.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://linkedin.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://youtube.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-youtube"></i></a>
                         <a href="https://instagram.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-instagram"></i></a>
                         <a href="https://pinterest.com/" target="_blank" class="btn btn-social-icon btn-linkedin"><i class="fab fa-pinterest-p"></i></a>
                     </p>
-                    <p>ශ්‍රී ලංකාවේ කැළණිපුරවරයේ සිට නිර්වාණ&#160;ධර්ම විහිදී පැතිරෙන වගයි! </p>
+                    <p>බුදුරජාණන්වහන්සේ වදාල ලෝකෝත්තර අර්ථ දැක්වෙන ශුන්‍යතා ධර්මය පැවසෙන ශ්‍රී මුඛ බුද්ධ දේශනාව බොහෝ කලක් ලොව බැබලීම පිණිස මෙම වෙබ් අඩවිය උපකාරයක් වේවායි අපගේ ප්‍රාර්ථනය යි! </p>
+                    <p>&tilde;සබ්බදානං ධම්මදානං ජිනාති&tilde;</p>
                     <p>Designing & Hosting by ROSHAN BANDARA </p>
 
         </footer>
