--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- <noscript>Not seeing a <a href="https://www.scrolltotop.com/">Scroll to Top Button</a>? Go to our FAQ page for more info.</noscript> -->
 
         
-        <title>nexter &mdash; your home, your freedom</title>
+        <title>ධර්ම | Dharma</title>
         
     </head>
     <body class="container">
