--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
               <h3 class="accordionItemHeading">චෛත්‍ය වන්දනාව</h3>
               <div class="accordionItemContent">
                 <p>වන්දාමි චෙතියං සබ්බං<br>
-සබ්බඨානේසු පතිට්ඨිතං<br>
-සාරීරික ධාතු මහා බෝධීං<br>
-බුද්ධරූපං සකලං සදා</p>
+                සබ්බඨානේසු පතිට්ඨිතං<br>
+                සාරීරික ධාතු මහා බෝධීං<br>
+                බුද්ධරූපං සකලං සදා</p>
               </div>
             </div>  
 
@@ -117,11 +117,11 @@
               <h3 class="accordionItemHeading">බෝධි වන්දනාව</h3>
               <div class="accordionItemContent">
                 <p>යස්ස මූලේ නිසින්නෝව<br>
-සබ්බාරි විජයං අකාඅ<br>
-පත්තෝ සබ්බඤ්ඤුතං සත්ථා<br>
-වන්දේ තං බෝධි පාදං</p>
-<p>ඉමේ ඒතේ මහාබෝධී – ලෝකනාථේන පූජිතා<br>
-අහම්පි තේ නමස්සාමි – බෝධි රාජා නමත්ථුතේ</p>
+                සබ්බාරි විජයං අකාඅ<br>
+                පත්තෝ සබ්බඤ්ඤුතං සත්ථා<br>
+                වන්දේ තං බෝධි පාදං</p>
+                <p>ඉමේ ඒතේ මහාබෝධී – ලෝකනාථේන පූජිතා<br>
+                අහම්පි තේ නමස්සාමි – බෝධි රාජා නමත්ථුතේ</p>
               </div>
             </div>  
 
@@ -129,7 +129,7 @@
               <h3 class="accordionItemHeading">පහන් පූජාව</h3>
               <div class="accordionItemContent">
                 <p>ඝනසාරප්ප දිත්තේන – දීපෙන තම ධංසිනා<br>
-තිලෝක දීපං සම්බුද්ධං – පූජයාමි තමෝනුදං</p>
+                තිලෝක දීපං සම්බුද්ධං – පූජයාමි තමෝනුදං</p>
               </div>
             </div>  
 
@@ -137,8 +137,8 @@
               <h3 class="accordionItemHeading">සුවඳ දුම් පූජාව</h3>
               <div class="accordionItemContent">
                 <p>සුගන්ධිකාය වදනං – අනන්ත ගුණ ගන්ධිනං<br>
-සුගන්ධිනා හං ගන්ධේන – පූජයාමී තථාගතං
-</p>
+                සුගන්ධිනා හං ගන්ධේන – පූජයාමී තථාගතං
+                </p>
               </div>
             </div>  
 
@@ -146,14 +146,14 @@
               <h3 class="accordionItemHeading">මල් පූජාව</h3>
               <div class="accordionItemContent">
                 <p>වණ්ණ ගන්ධ ගුණේපේතං<br>
-ඒතං කුසුම සන්තතිං<br>
-පූජයාමී මුනින්දස්ස<br>
-සිරීපද සරෝරුහේ</p>
-<p>
-පූජේමි බුද්ධං කුසුමේනනේන<br>
-පුඤ්ඤේන මේතේන ලභාමි මොක්ඛං<br>
-පුප්ඵං මිලායාති යථා ඉදම්මේ<br>
-කායෝ ත්ථා යාත් විනාසභාවං</p>
+                ඒතං කුසුම සන්තතිං<br>
+                පූජයාමී මුනින්දස්ස<br>
+                සිරීපද සරෝරුහේ</p>
+                <p>
+                පූජේමි බුද්ධං කුසුමේනනේන<br>
+                පුඤ්ඤේන මේතේන ලභාමි මොක්ඛං<br>
+                පුප්ඵං මිලායාති යථා ඉදම්මේ<br>
+                කායෝ ත්ථා යාත් විනාසභාවං</p>
               </div>
             </div>   
 
@@ -161,7 +161,7 @@
               <h3 class="accordionItemHeading">පැන් පූජාව</h3>
               <div class="accordionItemContent">
                 <p>අධිවාසේතු නෝ භන්තේ – පානීයං පරිකප්පිතං<br>
-අනුකම්පං උපාදාය – පත්ගණහාතුමුත්තම</p>
+                අනුකම්පං උපාදාය – පත්ගණහාතුමුත්තම</p>
               </div>
             </div> 
 
@@ -169,7 +169,7 @@
               <h3 class="accordionItemHeading">ආහාර පූජාව</h3>
               <div class="accordionItemContent">
                 <p>අධිවාසේතු නෝ භන්තේ – භෝජනං පරිකප්පිතං<br>
-අනුකම්පං උපාදාය – පතිගණ්හාතුමුත්තම</p>
+                අනුකම්පං උපාදාය – පතිගණ්හාතුමුත්තම</p>
               </div>
             </div> 
 
@@ -177,7 +177,7 @@
               <h3 class="accordionItemHeading">ගිලන්පස පූජාව</h3>
               <div class="accordionItemContent">
                 <p>අධිවාසේතු නෝ භන්තේ – ගිලාන පච්චයං ඉමං<br>
-අනුකම්පං උපාදාය – පතිගණ්හාතුමුත්තම</p>
+                අනුකම්පං උපාදාය – පතිගණ්හාතුමුත්තම</p>
               </div>
             </div> 
 
@@ -185,7 +185,7 @@
               <h3 class="accordionItemHeading">දැහැත් පූජාව</h3>
               <div class="accordionItemContent">
                 <p>නාගවල්ලී දලූපේතං – චුණ්ණ පූග සමායුතං<br>
-තාම්බූලං පත්ගණ්හාතු – සතං පූජේමිදං ජිනො</p>
+                තාම්බූලං පත්ගණ්හාතු – සතං පූජේමිදං ජිනො</p>
               </div>
             </div> 
 
@@ -193,19 +193,19 @@
               <h3 class="accordionItemHeading">ක්ෂමා කරවා ගැනීම</h3>
               <div class="accordionItemContent">
                 <p>කායේන වාචා චිත්තේන<br>
-පමාදේන මයාකතං<br>
-අච්චයං ඛම මේ භන්තේ<br>
-භූරිපඤ්ඤ තථාගත</p><br>
-<p>
-කායේන වාචා චිත්තේන<br>
-පමාදේන මයාකතං<br>
-අච්චයං ඛම මේ ධම්ම<br>
-සන්දිට්ධික අකාලික</p><br>
-<p>
-කායේන වාචා චිත්තේන<br>
-පමාදේන මයාකතං<br>
-අච්චයං ඛම මේ සංඝ<br>
-සුපටිපන්න අනුත්තර</p>
+                පමාදේන මයාකතං<br>
+                අච්චයං ඛම මේ භන්තේ<br>
+                භූරිපඤ්ඤ තථාගත</p><br>
+                <p>
+                කායේන වාචා චිත්තේන<br>
+                පමාදේන මයාකතං<br>
+                අච්චයං ඛම මේ ධම්ම<br>
+                සන්දිට්ධික අකාලික</p><br>
+                <p>
+                කායේන වාචා චිත්තේන<br>
+                පමාදේන මයාකතං<br>
+                අච්චයං ඛම මේ සංඝ<br>
+                සුපටිපන්න අනුත්තර</p>
               </div>
             </div> 
 
@@ -213,26 +213,26 @@
               <h3 class="accordionItemHeading">දෙවියන් ඇතුළු සියලු සතුන්ට පින්දීම</h3>
               <div class="accordionItemContent">
                 <p>එත්තාවතා ච අම්හේ හී<br>
-සම්භතං පුඤ්ඤ සම්පදං<br>
-සබ්බේ දේවා අනුමෝදන්තූ<br>
-සබ්බසම්පත්ති සිද්ධියා</p><br>
-<p>
-එත්තාවතා ච අම්හේ හී<br>
-සම්භතං පුඤ්ඤ සම්පදං<br>
-සබ්බේ භූතා අනුමෝදන්තූ<br>
-සබ්බසම්පත්ති සිද්ධියා</p><br>
-<p>
-එත්තාවතා ච අම්හේ හී<br>
-සම්භතං පුඤ්ඤ සම්පදං<br>
-සබ්බේ සත්තා අනුමෝදන්තූ<br>
-සබ්බසම්පත්ති සිද්ධියා///</p><br>
-<p>
-ආකාසට්ඨා ච භුම්මට්ඨා – දෙවා නාගා මහිධිකා<br>
-පුඤ්ඤං තං අනුමොදිත්වා – චිරං රක්ඛන්තු සාසනං<br>
-ආකාසට්ඨා ච භුම්මට්ඨා – දෙවා නාගා මහිධිකා<br>
-පුඤ්ඤං තං අනුමොදිත්වා – චිරං රක්ඛන්තු දෙසනං<br>
-ආකාසට්ඨා ච භුම්මට්ඨා – දෙවා නාගා මහිධිකා<br>
-පුඤ්ඤං තං අනුමොදිත්වා – චිරං රක්ඛන්තු මංපරං</p>
+                සම්භතං පුඤ්ඤ සම්පදං<br>
+                සබ්බේ දේවා අනුමෝදන්තූ<br>
+                සබ්බසම්පත්ති සිද්ධියා</p><br>
+                <p>
+                එත්තාවතා ච අම්හේ හී<br>
+                සම්භතං පුඤ්ඤ සම්පදං<br>
+                සබ්බේ භූතා අනුමෝදන්තූ<br>
+                සබ්බසම්පත්ති සිද්ධියා</p><br>
+                <p>
+                එත්තාවතා ච අම්හේ හී<br>
+                සම්භතං පුඤ්ඤ සම්පදං<br>
+                සබ්බේ සත්තා අනුමෝදන්තූ<br>
+                සබ්බසම්පත්ති සිද්ධියා///</p><br>
+                <p>
+                ආකාසට්ඨා ච භුම්මට්ඨා – දෙවා නාගා මහිධිකා<br>
+                පුඤ්ඤං තං අනුමොදිත්වා – චිරං රක්ඛන්තු සාසනං<br>
+                ආකාසට්ඨා ච භුම්මට්ඨා – දෙවා නාගා මහිධිකා<br>
+                පුඤ්ඤං තං අනුමොදිත්වා – චිරං රක්ඛන්තු දෙසනං<br>
+                ආකාසට්ඨා ච භුම්මට්ඨා – දෙවා නාගා මහිධිකා<br>
+                පුඤ්ඤං තං අනුමොදිත්වා – චිරං රක්ඛන්තු මංපරං</p>
               </div>
             </div> 
 
@@ -240,7 +240,7 @@
               <h3 class="accordionItemHeading">ඥාතීන්ට පින්දීම</h3>
               <div class="accordionItemContent">
                 <p>ඉදං මේ ඥාතීනං හෝතූ<br>
-සුඛිතා හෝන්තු ඥාතයෝ ///</p>
+                සුඛිතා හෝන්තු ඥාතයෝ ///</p>
               </div>
             </div> 
 
@@ -248,14 +248,14 @@
               <h3 class="accordionItemHeading">ප්‍රාර්ථනා</h3>
               <div class="accordionItemContent">
                 <p>දේවෝ වස්සතු කාලේන<br>
-සස්ස සම්පත්ති හේතු ව<br>
-වීතෝ භවතු ලෝකෝ ච<br>
-රාජා භවතු ධම්මිකෝ</p>
+                සස්ස සම්පත්ති හේතු ව<br>
+                වීතෝ භවතු ලෝකෝ ච<br>
+                රාජා භවතු ධම්මිකෝ</p>
 
-<p>ඉමිනා පුඤ්ඤකම්මෙන – මා මෙ බාලසමාගමෝ<br>
-සතං සමාගමො හොතු – යාව නිබ්බාණ පිත්තියා<p>
+                <p>ඉමිනා පුඤ්ඤකම්මෙන – මා මෙ බාලසමාගමෝ<br>
+                සතං සමාගමො හොතු – යාව නිබ්බාණ පිත්තියා<p>
 
-<p>සබ්බ දුක්ඛා පමුච්චතු ///</p>
+                <p>සබ්බ දුක්ඛා පමුච්චතු ///</p>
               </div>
             </div> 
 
@@ -269,41 +269,41 @@
               <div class="accordionItemContent">
                 <p>ඒවං මේ සුතං ඒකං සමයං භගවා සාවත්ථීයං විහරති ජේතවනේ අනාථ පිණ්ඩිකස්ස ආරාමේ, අථ ඛෝ, අඤ්ඤතරා දේවතා අභික්කන්තාය රත්තියා අභික්කන්ත වණ්ණා කේවල කප්පං ජේතවනං ඕභාසෙත්වා යේන භගවා තේනුපසංකමිංසු. උපසංකමිත්වා භගවන්තං අභිවාදෙත්වා ඒකමන්තං අට්ඨාසි. ඒකමන්තං ඨිතා ඛෝ සා දේවතා භගවන්තං ගාථාය අජ්ඣභාසි.</p><br>
 
-<p>බහූ දේවා මනුස්සා ච – මංගලානී අචින්තයුං<br>
-ආකංඛමානා සොත්ථානං – බ්‍රෑහි මංගල මුත්තමං</p><br>
+                <p>බහූ දේවා මනුස්සා ච – මංගලානී අචින්තයුං<br>
+                ආකංඛමානා සොත්ථානං – බ්‍රෑහි මංගල මුත්තමං</p><br>
 
-<p>අසේවනා ච බාලානං – පණ්ඩිතානං ච සේවනා<br>
-පූජා ච පූජනීයානං – ඒතං මංගල මුත්තමං</p><br>
+                <p>අසේවනා ච බාලානං – පණ්ඩිතානං ච සේවනා<br>
+                පූජා ච පූජනීයානං – ඒතං මංගල මුත්තමං</p><br>
 
-<p>පතිරූප දේස වාසෝ ච – පුබ්බේ ච කත පුඤ්ඤතා<br>
-අත්ත සම්මා පණීධි ච – ඒතං මංගල මුත්තමං</p><br>
+                <p>පතිරූප දේස වාසෝ ච – පුබ්බේ ච කත පුඤ්ඤතා<br>
+                අත්ත සම්මා පණීධි ච – ඒතං මංගල මුත්තමං</p><br>
 
-<p>බාහු සච්චඤ් ච සිප්පඤ් ච – විනයෝ ච සුසික්ඛිතෝ<br>
-සුභාසිතා ච යා වාචා – ඒතං මංගල මුත්තමං</p><br>
+                <p>බාහු සච්චඤ් ච සිප්පඤ් ච – විනයෝ ච සුසික්ඛිතෝ<br>
+                සුභාසිතා ච යා වාචා – ඒතං මංගල මුත්තමං</p><br>
 
-<p>මාතාපිතූ උපට්ඨානං – පුත්තදාරස්ස සංගහෝ<br>
-අනාකුලා ච කම්මන්තා – ඒතං මංගල මුත්තමං</p><br>
+                <p>මාතාපිතූ උපට්ඨානං – පුත්තදාරස්ස සංගහෝ<br>
+                අනාකුලා ච කම්මන්තා – ඒතං මංගල මුත්තමං</p><br>
 
-<p>දානං ච ධම්මචරියා ච – ඤාතකානං ච සංගහෝ<br>
-අනවජ්ජානි කම්මානි – ඒතං මංගල මුත්තමං</p><br>
+                <p>දානං ච ධම්මචරියා ච – ඤාතකානං ච සංගහෝ<br>
+                අනවජ්ජානි කම්මානි – ඒතං මංගල මුත්තමං</p><br>
 
-<p>ආරති විරති පාපා – මජ්ජපානා ච සඤ්ඤමෝ<br>
-අප්පමාදෝ ච ධම්මේසු – ඒතං මංගල මුත්තමං</p><br>
+                <p>ආරති විරති පාපා – මජ්ජපානා ච සඤ්ඤමෝ<br>
+                අප්පමාදෝ ච ධම්මේසු – ඒතං මංගල මුත්තමං</p><br>
 
-<p>ගාරවෝ ච නිවාතෝ ච – සනතුට්ඨි ච කතඤ්ඤුතා<br>
-කාලේන ධම්ම සවණං – ඒතං මංගල මුත්තමං</p><br>
+                <p>ගාරවෝ ච නිවාතෝ ච – සනතුට්ඨි ච කතඤ්ඤුතා<br>
+                කාලේන ධම්ම සවණං – ඒතං මංගල මුත්තමං</p><br>
 
-<p>ඛන්තී ච සෝවචස්සතා – සමණානං ච දස්සනං<br>
-කාලේන ධම්ම සාකච්ඡා – ඒතං මංගල මුත්තමං</p><br>
+                <p>ඛන්තී ච සෝවචස්සතා – සමණානං ච දස්සනං<br>
+                කාලේන ධම්ම සාකච්ඡා – ඒතං මංගල මුත්තමං</p><br>
 
-<p>තපෝ ච බ්රහ්ම චරියං ච – අරියසච්චාන දස්සනං<br>
-නිබ්බාන සච්ඡිකිරියා ච – ඒතං මංගල මුත්තමං</p><br>
+                <p>තපෝ ච බ්රහ්ම චරියං ච – අරියසච්චාන දස්සනං<br>
+                නිබ්බාන සච්ඡිකිරියා ච – ඒතං මංගල මුත්තමං</p><br>
 
-<p>ඵුට්ඨස්ස ලෝකධම්මේහී – චිත්තං යස්ස න කම්පති<br>
-අසෝකං විරජං ඛේමං – ඒතං මංගල මුත්තමං</p><br>
+                <p>ඵුට්ඨස්ස ලෝකධම්මේහී – චිත්තං යස්ස න කම්පති<br>
+                අසෝකං විරජං ඛේමං – ඒතං මංගල මුත්තමං</p><br>
 
-<p>ඒතාදිසානි කත්වාන – සබ්බත්ථ මපරාජිතා<br>
-සබ්බත්ථ සොත්ථිං ගච්ඡන්ති තං - තේසං මංගල මුත්තමන්ති.</p>
+                <p>ඒතාදිසානි කත්වාන – සබ්බත්ථ මපරාජිතා<br>
+                සබ්බත්ථ සොත්ථිං ගච්ඡන්ති තං - තේසං මංගල මුත්තමන්ති.</p>
               </div>
             </div>
 
@@ -479,19 +479,17 @@
 
  
 
-    <p>  ආකාස පබ්බත වන භූමි තටාක ගංගා මහාසමුද්ද ආරක්ඛ දේවතා සදා තුම්හේ අනුරක්ඛන්තු. සබ්බබුද්ධානුභාවේන, සබ්බධම්මානු-භාවේන, සබ්බසංඝානුභාවේන, බුද්ධරතනං, ධම්මරතනං, සංඝරතනං, තින්නං රතනානං ආනුභාවේන, චතුරාසීති සහස්ස ධම්මක්ඛන්ධානු-භාවේන, පිටකත්තයානුභාවේන, ජිනසාවකානුභාවේන, සබ්බේ තේ රෝගා, සබ්බේ තෙ භයා, සබ්බේ තෙ අන්තරායා, සබ්බේ තේ උපද්දවා සබ්බේ තේ දුන්නිමිත්තා සබ්බේ තේ අවමංගලා විනස්සන්තු:- ආයුවඩ්ඪකෝ, ධනවඩ්ඪකෝ, සිරිවඩ්ඪකෝ, යසවඩ්ඪකෝ, බලවඩ්ඪකෝ, වණ්ණවඩ්ඪකෝ, සුඛවඩ්ඪකෝ හෝතු සබ්බදා,</p><br>
+                <p>  ආකාස පබ්බත වන භූමි තටාක ගංගා මහාසමුද්ද ආරක්ඛ දේවතා සදා තුම්හේ අනුරක්ඛන්තු. සබ්බබුද්ධානුභාවේන, සබ්බධම්මානු-භාවේන, සබ්බසංඝානුභාවේන, බුද්ධරතනං, ධම්මරතනං, සංඝරතනං, තින්නං රතනානං ආනුභාවේන, චතුරාසීති සහස්ස ධම්මක්ඛන්ධානු-භාවේන, පිටකත්තයානුභාවේන, ජිනසාවකානුභාවේන, සබ්බේ තේ රෝගා, සබ්බේ තෙ භයා, සබ්බේ තෙ අන්තරායා, සබ්බේ තේ උපද්දවා සබ්බේ තේ දුන්නිමිත්තා සබ්බේ තේ අවමංගලා විනස්සන්තු:- ආයුවඩ්ඪකෝ, ධනවඩ්ඪකෝ, සිරිවඩ්ඪකෝ, යසවඩ්ඪකෝ, බලවඩ්ඪකෝ, වණ්ණවඩ්ඪකෝ, සුඛවඩ්ඪකෝ හෝතු සබ්බදා,</p><br>         
+                <p>
+                  දුක්ඛ රෝග භයා වේරා - සෝකාසන්තතු පද්දවා<br>
 
- 
-<p>
-      දුක්ඛ රෝග භයා වේරා - සෝකාසන්තතු පද්දවා<br>
+                  අනේකා අන්තරායා පි - විනස්සන්තු ච තේජසා<br>
 
-      අනේකා අන්තරායා පි - විනස්සන්තු ච තේජසා<br>
+                  ජය සිද්ධි ධනං ලාභං - සොත්ථි භාග්‍යං සුඛං බලං<br>
 
-      ජය සිද්ධි ධනං ලාභං - සොත්ථි භාග්‍යං සුඛං බලං<br>
+                  සිරි ආයු ච වණ්ණෝ ච - භෝගං වුද්ධි ච යසවා<br>
 
-      සිරි ආයු ච වණ්ණෝ ච - භෝගං වුද්ධි ච යසවා<br>
-
-      සත්වස්සා ච ආයූ ච - ජීවසිද්ධි භවන්තු තෙ.</p>
+                  සත්වස්සා ච ආයූ ච - ජීවසිද්ධි භවන්තු තෙ.</p>
               </div>
             </div>
 
@@ -507,12 +505,12 @@
         <footer class="footer" id="contact">
          
                     <p>
-                        Copyright &copy; 2019 නිර්වාණ ධර්ම. All rights reserved.
+                        Copyright &copy; 2019 ධර්ම. All rights reserved.
                     </p>
                     <!-- <p></p> -->
 
                     <p>
-                        <strong>රැඳී සිටින්න නිර්වාණ&#160;ධර්ම සමඟින්!</strong>
+                        <strong>රැඳී සිටින්න ධර්ම සමඟින්!</strong>
                     </p>
                     <p class="social">
                         <a href="https://www.facebook.com/" target="_blank" class="btn btn-social-icon btn-facebook"><i class="fab fa-facebook-f"></i></a>
