--- a/index.html
+++ b/index.html
@@ -526,7 +526,9 @@
                     <p>Designing & Hosting by ROSHAN BANDARA </p>
 
         </footer>
-
+                <svg >
+                    <use xlink:href="img/undraw_web_development_w2vv.svg#e8c09660-db65-4061-a2dc-920e909a0453"></use>
+                </svg>
         <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
 
         <!-- <a href="#" class="scrollToTop" style="display: none;">Top</a> -->
